[package]
name = "git-delayed"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "git-delayed"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
dirs = "5.0"
fs2 = "0.4"
daemonize = "0.5"
git2 = "0.18"
regex = "1.10"
nix = { version = "0.27", features = ["signal"] }
